# hunter-ai-content-factory

./: CONTRIBUTING.md  LICENSE  README.md  app.py  pyproject.toml  run.bat  run.sh
.devcontainer/: devcontainer.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
docs/: github_badges_template.md
src/: __init__.py  bootstrap.py  config.py  gradio_app.py  gradio_launcher.py  main.py
src/factory/: __init__.py  executor.py  publisher.py  workflow.py
src/intel/: __init__.py  auto_publisher.py  github_hunter.py  github_trending.py  pain_radar.py  pain_store.py  reddit_hunter.py  utils.py  xiaohongshu_browser.py  xiaohongshu_hunter.py
src/refiner/: refiner.py
src/static/: styles.css
src/templates/: __init__.py  auto_template.py  github_template.py  news_template.py  pain_template.py  xiaohongshu_template.py
src/ui/: __init__.py  app.py  constants.py  handlers.py
src/ui/components/: __init__.py  footer.py  header.py
src/ui/tabs/: __init__.py  auto_tab.py  check_tab.py  github_tab.py  intro_tabs.py  news_tab.py  pain_tab.py  settings_tab.py  xhs_tab.py
src/utils/: ai_client.py  config_validator.py  content_filter.py  logger.py
