[project]
name = "hunter"
version = "1.0.0"
description = "AI 内容工厂 - 自动采集、分析、生成公众号文章"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [
    { name = "Qihao" }
]
keywords = ["ai", "content", "wechat", "automation", "gemini"]

dependencies = [
    "httpx>=0.27.0",              # HTTP 客户端（替代 requests，支持异步）
    "chromadb>=0.5.0",            # 向量数据库
    "sqlalchemy>=2.0.0",          # SQLite ORM（痛点结构化存储）
    "google-genai>=1.0.0",        # Gemini API 客户端
    "twikit>=2.0.0",              # Twitter 非官方客户端
    "pyyaml>=6.0.0",              # YAML 配置文件解析
    "click>=8.1.0",               # CLI 框架
    "rich>=13.0.0",               # 终端美化输出
    "pydantic>=2.0.0",            # 数据验证
    "tenacity>=8.2.0",            # 重试机制（指数退避）
    "playwright>=1.57.0",
    "gradio>=5.0.0",              # Web UI 框架
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
]

[project.scripts]
hunter = "src.main:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.12"
strict = false
warn_return_any = true
warn_unused_ignores = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
